--- a/app/src/main/res/menu/menu_haromszog.xml
+++ b/app/src/main/res/menu/menu_haromszog.xml
@@ -4,15 +4,16 @@
     <item android:id="@+id/action_reset"
         android:title="@string/menu_vissza"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        android:icon="@drawable/ic_history_white_36dp"
+        android:showAsAction="ifRoom" />
     <item android:id="@+id/action_info"
         android:title="@string/menu_sugo"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        android:icon="@drawable/ic_help_outline_white_36dp"
+        android:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_rajz"
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/munu_rajz" />
-
 </menu>
