--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,7 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="hu.valamas.hevesitoolbox.MainActivity">
 
-<!--
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" android:showAsAction="never" /> -->
+    <item android:id="@+id/action_info"
+        android:title="@string/menu_sugo"
+        android:orderInCategory="100"
+        android:icon="@drawable/ic_help_outline_white_36dp"
+        android:showAsAction="ifRoom" />
 </menu>
