--- a/app/src/main/res/menu/menu_numerikusterulet.xml
+++ b/app/src/main/res/menu/menu_numerikusterulet.xml
@@ -4,12 +4,14 @@
     <item android:id="@+id/action_reset"
         android:title="@string/menu_vissza"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        android:icon="@drawable/ic_history_white_36dp"
+        android:showAsAction="ifRoom" />
     <item android:id="@+id/action_info"
         android:title="@string/menu_sugo"
         android:orderInCategory="100"
-        android:showAsAction="never" />
-
+        android:icon="@drawable/ic_help_outline_white_36dp"
+        android:showAsAction="ifRoom" />
+</menu>
     <!--
     <item
         android:id="@+id/action_rajz"
@@ -18,4 +20,3 @@
         android:title="Rajzolás" />
 
         -->
-</menu>
