--- a/app/src/main/res/menu/menu_wgseov.xml
+++ b/app/src/main/res/menu/menu_wgseov.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="hu.valamas.hevesitoolbox.szamolasok.metszesek.oldal">
+    tools:context="hu.valamas.hevesitoolbox.szamolasok.wgseov">
     <item android:id="@+id/action_reset"
         android:title="@string/menu_vissza"
         android:orderInCategory="100"
